fixed white space with no results

--- a/frontend/src/styles/results.scss
+++ b/frontend/src/styles/results.scss
@@ -92,6 +92,7 @@
 }
 
 .results-background {
+    min-height: 100%;
     background-image: url("childs_play_dark.png");
     background-size: cover;
     background-attachment: fixed;
